fixed positioning of scrollbars

--- a/spreadsheet/src/spreadsheet/bottomBar/BottomBar.module.scss
+++ b/spreadsheet/src/spreadsheet/bottomBar/BottomBar.module.scss
@@ -6,7 +6,7 @@
   background: #f5f6f7;
   box-shadow: 0 -1px 3px -1px rgb(169 164 164);
   position: absolute;
-  bottom: 0;
+  top: 100%;
   left: 0;
   right: 0;
   font-family: 'Nunito Sans', Arial;
