--- a/spreadsheet/src/spreadsheet/formulaBar/FormulaBar.module.scss
+++ b/spreadsheet/src/spreadsheet/formulaBar/FormulaBar.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   background: #fff;
   height: 100%;
+  display: none;
 }
 
 .editorArea {
