--- a/spreadsheet/src/spreadsheet/sheetsGroup/sheet/scrollBars/ScrollBar.module.scss
+++ b/spreadsheet/src/spreadsheet/sheetsGroup/sheet/scrollBars/ScrollBar.module.scss
@@ -25,6 +25,7 @@
 .horizontalScrollBar {
   @include scrollBar();
 
+  bottom: 0;
   left: 0;
   overflow-x: scroll;
   overflow-y: hidden;
